# ml_challange

./: .env  .gitignore  Dockerfile  README.md  TODO  api.py  configs.json  data_processing.py  docker-compose.yml  explainer.ipynb  feature_eng.py  main.py  model_training.ipynb  pyproject.toml  requirements.txt  train_models.py
modelling/: configs.py  data_processing.py  feature_eng.py  model_training.ipynb  region_best_params.json  train_models.py
src/: api.py
