[project]
name = "traive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.10",
    "matplotlib>=3.10.1",
    "mlflow>=2.20.3",
    "numpy>=2.2.3",
    "optuna>=4.2.1",
    "pandantic>=1.0.0",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sktime>=0.36.0",
    "statsmodels>=0.14.4",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.4",
]
